# mlable

./: .gitmodules  pyproject.toml
.github/: README.md
docs/: agents.md  context.md  decisions.md  ideas.md  index.md  invariants.md  issues.md  primer.jj  references.md  roadmap.md  todo.md
docs/package/layers/: embedding.md  shaping.md
docs/package/metrics/: index.md
docs/sources/: index.md
docs/sources/layers/: index.md  transformer.md
docs/sources/metrics/: group_accuracy.md
mlable/: blocks.py  caching.py  data.py  metrics.py  models.py  ops.py  sampling.py  schedules.py  shapes.py  shaping.py  text.py  utils.py
mlable/blocks/: convolution.py  normalization.py  transformer.py
mlable/blocks/attention/: generic.py  transformer.py
mlable/blocks/convolution/: generic.py  resnet.py  unet.py
mlable/layers/: embedding.py  linear.py  reshaping.py  shaping.py  transformer.py  vision.py
mlable/models/: diffusion.py
mlable/shaping/: hilbert.py
mlable/spaces/: hilbert.py
mlable/tensorflow/: io.py
tests/: test_caching.py  test_data.py  test_masking.py  test_metrics.py  test_ops.py  test_probs.py  test_sampling.py  test_schedules.py  test_shapes.py  test_shaping.py  test_text.py  test_utils.py
tests/blocks/: test_convolution.py  test_normalization.py  test_shaping.py  test_transformer.py  test_vision.py
tests/layers/: test_embedding.py  test_linear.py  test_reshaping.py  test_shaping.py  test_transformer.py  test_vision.py
tests/math/: test_ops.py  test_probs.py
tests/maths/: test_ops.py  test_probs.py
tests/shaping/: test_hilbert.py
(+6 files in other folders)
