[project]
name = "mlable"
version = "0.23.0"
description = "Tensorflow libs: layers, metrics, ops, etc."
authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
readme = ".github/README.md"
license = "AGPL-3.0"
license-files = [".github/LICENSE.md"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "densecurves>=0.2",
    "tensorflow>=2.16",]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlable"]

[tool.hatch.build.targets.sdist]
include = ["src/mlable", "pyproject.toml", ".github/README.md", ".github/LICENSE.md"]
